initial folder structure

--- a/API/CLERP/CLERP.csproj
+++ b/API/CLERP/CLERP.csproj
@@ -11,4 +11,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Database\Entities\" />
+    <Folder Include="Dtos\" />
+    <Folder Include="Database\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
