Created all entities excluding product type and order

--- a/API/CLERP/CLERP.csproj
+++ b/API/CLERP/CLERP.csproj
@@ -12,9 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Database\Entities\" />
     <Folder Include="Dtos\" />
-    <Folder Include="Database\" />
+    <Folder Include="Migrations\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
