--- a/API/CLERP/appsettings.json
+++ b/API/CLERP/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Settings": {
+    "ConnectionStringLocal": "Data Source=.\\SQLEXPRESS;Initial Catalog=clerpDb;Integrated Security=True;MultipleActiveResultSets=True;"
+  }
 }
