Added some entities and did some rearrangements of some existing ones

--- a/API/CLERP/appsettings.json
+++ b/API/CLERP/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "Settings": {
-    "ConnectionStringLocal": "Data Source=.\\SQLEXPRESS;Initial Catalog=clerpDb;Integrated Security=True;MultipleActiveResultSets=True;"
+    "ConnectionStringLocal": "Data Source=.\\SQLEXPRESS;Initial Catalog=ClerpDB;Integrated Security=True;MultipleActiveResultSets=True;"
   }
 }
