--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -1,7 +1,8 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Trave",
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*",
