--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -7,6 +7,11 @@
     <AssemblyName>API</AssemblyName>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\VisualStudio\Projects\CLERP\API\API\API.xml</DocumentationFile>
+    <NoWarn>1701;1702; 1591</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="Dtos\**" />
     <Content Remove="Dtos\**" />
@@ -34,6 +39,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.1" />
+    <PackageReference Include="NSwag.AspNetCore" Version="12.2.5" />
   </ItemGroup>
 
 </Project>
