Some adjustments to the Dtos and Exceptions

--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "ConnectionStringLocal": "Data Source=.\\SQLEXPRESS;Initial Catalog=ClerpDB;Integrated Security=True;MultipleActiveResultSets=True;"
+    "ConnectionstringLocal": "Data Source=.\\SQLEXPRESS;Initial Catalog=ClerpDB;Integrated Security=True;MultipleActiveResultSets=True;"
   },
   "JwtOptions": {
     "ValidFor": "2.00:00:00"
