--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "ConnectionstringLocal": "Data Source=.\\SQLEXPRESS;Initial Catalog=ClerpDB;Integrated Security=True;MultipleActiveResultSets=True;"
+    "ConnectionstringLocal": "Data Source=.\\SQLEXPRESS;Initial Catalog=ClerpDB;Integrated Security=True;MultipleActiveResultSets=True;",
+    "HSTSMaxAge":  60
   },
   "JwtOptions": {
     "ValidFor": "2.00:00:00"
