Set language version to latest / default message for BadRequestException

--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -9,6 +9,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>C:\VisualStudio\Projects\CLERP\API\API\API.xml</DocumentationFile>
+    <LangVersion>latest</LangVersion>
     <NoWarn>1701;1702; 1591</NoWarn>
   </PropertyGroup>
 
