added indexes, added routing (without guard), added empty auth service

--- a/Client/tsconfig.json
+++ b/Client/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@Models/*" : ["src/app/_models/*"]
+      "@*" : ["src/app/*"],
+      "@Models/*" : ["src/app/_models/*"],
+      "@Core/*" : ["src/app/core/*"]
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
