--- a/Client/package.json
+++ b/Client/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "generate-swagger-client": "ng-swagger-gen -i ./src/app/_generated/config/swagger-config.json -o ./src/app/_generated"
+    "generate-swagger-client": "ng-swagger-gen -i ./src/app/_generated/config/swagger-config.json -o ./src/app/_generated",
+    "start": "ng serve --ssl --ssl-key .\\certificates\\localhost.key  --ssl-cert .\\certificates\\localhost.crt"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "jwt-decode": "^2.2.0",
     "ng-bootstrap": "^1.6.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
