started on product rework

--- a/Client/angular.json
+++ b/Client/angular.json
@@ -28,7 +28,8 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/font-awesome/css/font-awesome.min.css"  
             ],
             "scripts": [],
             "es5BrowserSupport": true
