--- a/Client/package.json
+++ b/Client/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jwt-decode": "^2.2.0",
     "ng-bootstrap": "^1.6.3",
     "rxjs": "~6.3.3",
