--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "jwt-decode": "^2.2.0",
     "ng-bootstrap": "^1.6.3",
     "rxjs": "~6.3.3",
