--- a/Client/package.json
+++ b/Client/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "@zxing/ngx-scanner": "^1.7.1",
+    "angular2-qrscanner": "^1.0.7",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
